<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:fillViewport="true"
    tools:context=".activities.login.LoginActivity"
    >
    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="@dimen/login_edit_text_height"
            android:layout_marginStart="32dp"
            android:layout_marginTop="150dp"
            android:layout_marginBottom="24dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/edittext_rounded"
            android:hint="@string/login_email"
            android:inputType="textEmailAddress"
            android:paddingLeft="@dimen/login_edit_text_space"
            android:paddingRight="@dimen/login_edit_text_space"
            android:textSize="@dimen/login_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/buttonForgot"/>


        <Button
            android:id="@+id/buttonForgot"
            android:layout_width="match_parent"
            android:layout_height="@dimen/login_button_xl_height"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="192dp"
            android:background="@drawable/button_ripple_bg"
            android:text="@string/login_reset_password"
            android:textColor="@color/colorPrimaryText"
            android:textSize="@dimen/login_text_xl_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/buttonGoLogIn" />



        <Button
            android:id="@+id/buttonGoLogIn"
            android:layout_width="415dp"
            android:layout_height="@dimen/login_button_xl_height"
            android:background="@drawable/button_ripple"
            android:text="@string/login_go_login"
            android:textColor="@color/colorSecondaryText"
            android:textSize="@dimen/login_text_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>