<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:fillViewport="true"
    tools:context=".activities.login.LoginActivity"
    >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="@dimen/login_edit_text_height"
            android:layout_marginStart="32dp"
            android:layout_marginTop="150dp"
            android:layout_marginBottom="24dp"
            android:layout_marginEnd="32dp"
            app:endIconMode="clear_text"
            android:textSize="@dimen/login_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/editTextPassword"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/login_email"/>

        </com.google.android.material.textfield.TextInputLayout>


        <!--<EditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="@dimen/login_edit_text_height"
            android:layout_marginStart="32dp"
            android:layout_marginTop="150dp"
            android:layout_marginBottom="24dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/edittext_rounded"
            android:hint="@string/login_email"
            android:inputType="textEmailAddress"
            android:paddingLeft="@dimen/login_edit_text_space"
            android:paddingRight="@dimen/login_edit_text_space"
            android:textSize="@dimen/login_text_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/editTextPassword"/>-->

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="@dimen/login_edit_text_height"
            android:layout_marginStart="32dp"
            android:layout_marginBottom="24dp"
            android:layout_marginEnd="32dp"
            app:endIconMode="password_toggle"
            android:textSize="@dimen/login_text_size"
            app:layout_constraintBottom_toTopOf="@id/buttonLogIn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">
            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/login_password"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!--<EditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="@dimen/login_edit_text_height"
            android:layout_marginStart="32dp"
            android:layout_marginBottom="24dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/edittext_rounded"
            android:hint="@string/login_password"
            android:inputType="textPassword"
            android:paddingLeft="@dimen/login_edit_text_space"
            android:paddingRight="@dimen/login_edit_text_space"
            android:textSize="@dimen/login_text_size"
            app:layout_constraintBottom_toTopOf="@id/buttonLogIn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />-->


        <Button
            android:id="@+id/buttonLogIn"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="32dp"
            android:background="@drawable/button_ripple_bg"
            android:text="@string/login_sign_in"
            android:textColor="@color/colorPrimaryText"
            android:textSize="@dimen/login_text_xl_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/textViewForgotPassword"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"/>

        <TextView
            android:id="@+id/textViewForgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorSecondaryText"
            android:text="@string/login_forgot_password"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/buttonLogInGoogle"
            android:layout_marginBottom="32dp"
            />

        <Button
            android:id="@+id/buttonLogInGoogle"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="32dp"
            android:background="@drawable/button_ripple_google"
            android:text="@string/login_sign_in_google"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/buttonCreateAccount"
            />


        <Button
            android:id="@+id/buttonCreateAccount"
            android:layout_width="415dp"
            android:layout_height="48dp"
            android:background="@drawable/button_ripple"
            android:text="@string/login_create_account"
            android:textColor="@color/colorSecondaryText"
            android:textSize="@dimen/login_text_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>